logs/django-simple-spam-blocker.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_simple_spam_blocker-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplespamblocker'...
Compiling './lib/python3.5/site-packages/simplespamblocker/forms.py'...
***   File "./lib/python3.5/site-packages/simplespamblocker/forms.py", line 13
    except re.error, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simplespamblocker/migrations'...
Listing './lib/python3.5/site-packages/simplespamblocker/tests'...
Listing './lib/python3.5/site-packages/simplespamblocker/tests/templates'...
Listing './lib/python3.5/site-packages/simplespamblocker/tests/templates/simplespamblocker'...
Listing './share'...
Listing './share/python-wheels'...
